--- a/profile.css
+++ b/profile.css
@@ -10,9 +10,13 @@ body{
     background-color: #FEE074;
 }
 nav{
-    background:rgba(255, 255, 255, 0.8);
+    background:rgba(255, 255, 255, 1);
     width: 100%;
     height: 60px;
+    transition: 0.4s;
+    position: fixed;
+    top: 0;
+    z-index: 99;
 }
 label.logo1{
     font-family: Cherry Cream Soda;
@@ -54,43 +58,35 @@ a.klik, a:hover{
     text-decoration: underline;
     transition: .5s;
 }
+a#logo{
+    background: none;
+    text-decoration: none;
+    transition: .5s;
+}
 #login{
     background: rgba(188, 154, 32, 0.9);
 }
-table, th, td{
-    margin-top: 100px;
+.profile{
+    box-sizing: border-box;
+    width: 500px;
     margin: auto;
-    padding: 3px;
-}
-table{
-    margin-top: 30px;
-    width: 60%
-}
-tr{
-    width: 100%;
-}
-input[type=text]{
-    width: 100%;
-    border: 1px solid black;
-    border-radius: 5px;
-    background-color: #F2EFAD;
-    height: 23px;
-}
-textarea{
-    width: 100%;
-    border: 1px solid black;
-    border-radius: 5px;
-    background-color: #F2EFAD;
-}
-#masukkangambar{
-    background-color: white;
-}
-.tombol button{
-    width: 80px;
-    padding: 3px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+    margin-top: 100px;
+}
+.namalengkap{
+    margin: 20px 0px;
+    text-decoration: underline;
+}
+button{
+    padding: 5px;
+    border: 1px solid black;
     border-radius: 5px;
 }
-.tombol{
-    margin: 0px 400px;
+.aturakun{
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
+.aturakun button{
+    background-color: #E1C048;
 }
