--- a/login 1.css
+++ b/login 1.css
@@ -65,6 +65,7 @@ h1{
     align-content: center;
     text-align: center;
     margin:auto;
+    outline: none;
 }
 
 .lupa-password button{
@@ -88,6 +89,7 @@ h1{
     align-content: center;
     text-align: center;
     margin:auto;
+    outline: none;
 }
 
 a.klik, a:hover{
