--- a/addwisata.css
+++ b/addwisata.css
@@ -75,12 +75,14 @@ input[type=text]{
     border-radius: 5px;
     background-color: #F2EFAD;
     height: 23px;
+    outline: none;
 }
 textarea{
     width: 100%;
     border: 1px solid black;
     border-radius: 5px;
     background-color: #F2EFAD;
+    outline: none;
 }
 #masukkangambar{
     background-color: white;
@@ -90,6 +92,7 @@ textarea{
     padding: 3px;
     text-align: center;
     border-radius: 5px;
+    outline: none;
 }
 .tombol{
     margin: 0px 400px;
