--- a/pemesanan.css
+++ b/pemesanan.css
@@ -65,10 +65,16 @@ a.klik, a:hover{
 }
 .judul{
     text-align: center;
-    margin: 20px 40% 90px;
+    margin: 3px 40% 90px;
     padding: 20px;
+}
+h1{
     color: white;
     text-decoration-line: underline;
+}
+.wilayah{
+    color: white;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 .atas{
     background-image: url(wotuolu.png);
@@ -123,7 +129,7 @@ a.klik, a:hover{
     margin: auto;
     width: 300px;
     height: 180px;
-    margin-right: 0px;
+    margin-right: 45px;
     padding: 30px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -149,7 +155,7 @@ a.klik, a:hover{
     align-content: center;
     text-align: center;
     margin-top:80px;
-    margin-left:45%;
+    margin-left:43.5%;
 }
 
 
