--- a/artikel.css
+++ b/artikel.css
@@ -51,7 +51,7 @@ nav ul li a{
 a.klik, a:hover{
     background: #fff242b7;
     text-decoration: underline;
-    transition: .5s;.
+    transition: .5s;
 }
 #login{
     background: rgba(188, 154, 32, 0.9);
@@ -63,6 +63,8 @@ a.klik, a:hover{
     color: black ;
     padding: 30px 120px 0px 100px;
     font-family: sans-serif;
+    margin-bottom: 20px;
+    text-align: justify;
 }
 h1{
     text-align: center;
