ini tambahan code bagian booking

--- a/jadi bayar.css
+++ b/jadi bayar.css
@@ -9,6 +9,7 @@ body{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-image: url(bg\ 4.png);
     background-size: cover;
+    margin-bottom: 30px;
 }
 nav{
     background:rgba(255, 255, 255, 0.8);
@@ -115,7 +116,7 @@ a.klik, a:hover{
     box-shadow: 0 2px 10px rgba(0,0,0,0.3);
     width: 500px;
     height: 280px;
-    margin-left: 450px;
+    margin: auto;
     padding: 30px;
     align-items: center;
     justify-content: center;
@@ -151,9 +152,9 @@ p{
     margin: auto;
     text-align: center;
     align-content: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     padding: 0 60px;
-    margin-left: -100px;
+    outline: none;
 }
 .jadiya button{
     background-color: #937B00;
@@ -162,23 +163,24 @@ p{
     border-radius: 5px;
     border: 1.5px solid #ffffff;
     display: block;
-    width: 80%;
+    width: 90px;
     align-content: center;
     text-align: center;
-    margin:auto;
-    margin-left: 50px;
-    margin-right: 50px;
-
-}.jaditdk button{
+    outline: none;
+}
+.jaditdk button{
     background-color: #937B00;
     padding: 8px;
     font-size: 13px;
     border-radius: 5px;
     border: 1.5px solid #ffffff;
     display: block;
-    width: 80%;
+    width: 90px;
     align-content: center;
     text-align: center;
-    margin-left:100px;
-    
+    outline: none;
+}
+a.pencet:hover{
+    color: black;
+    text-decoration: none;
 }
