--- a/metodebyr.css
+++ b/metodebyr.css
@@ -9,6 +9,7 @@ body{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-image: url(bg\ 4.png);
     background-size: cover;
+    margin-bottom: 20px;
 }
 nav{
     background:rgba(255, 255, 255, 0.8);
@@ -65,10 +66,10 @@ a.klik, a:hover{
 }
 .atas{
     background-image: url(wotuolu.png);
-    position: absolute;
+    position: relative;
     background-repeat: no-repeat;
     width: 85%;
-    height: 40%;
+    height: 300px;
     margin-left: 100px;
     margin-right: 100px;
     top: 60px;
@@ -76,8 +77,9 @@ a.klik, a:hover{
     padding-top: 40px;
 }
 .judul{
+    width: 500px;
     text-align: center;
-    margin: 20px 40% 90px;
+    margin: auto;
     padding: 20px;
     color: white;
     text-decoration-line: underline;
@@ -87,10 +89,12 @@ a.klik, a:hover{
     width: 100%;
     height: 100px;
     display: flex;
-    position: absolute;
+    position: relative;
     font-family: sans-serif;
     font-size: 16px;
     background-color: #E1C048;
+    margin-top: 100px;
+    margin-bottom: 50px;
 }
 .tgl{
     text-align: center;
@@ -110,9 +114,7 @@ a.klik, a:hover{
 }
 .pilih{
     text-align: center;
-    margin-right: 15%;   
-    margin-left: 20%;
-    margin-top: 20%;
+    margin: auto;
 }
 .metode img{
     width: 50px;
@@ -121,15 +123,16 @@ a.klik, a:hover{
     top: 100px;
 }
 .metodeatas{
-    width: 100%;
     height: 50%;
     top: 40px;
     display: flex;
+    box-sizing: border-box;
+    width: 300px;
     position: relative;
     text-align: center;
     margin: auto;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 .bni{
     margin-right: 2%;
@@ -145,7 +148,6 @@ a.klik, a:hover{
 }
 .bri{
     margin-right: 2%;
-
 }
 
 .metodebwh{
@@ -157,7 +159,7 @@ a.klik, a:hover{
     position: relative;
     align-items: center;
     justify-content: center;
-    margin: auto;
+    margin-top: 20px;
 }
 .bca{
     margin-right: 3%;
@@ -167,5 +169,9 @@ a.klik, a:hover{
     width: 50px;
     height: 40px;
 }
-
+a.noneklik:hover{
+    color: black;
+    background: none;
+    text-decoration: none;
+}
 
