--- a/pemesanan.css
+++ b/pemesanan.css
@@ -65,8 +65,19 @@ a.klik, a:hover{
 }
 .judul{
     text-align: center;
-    margin: 3px 40% 90px;
-    padding: 20px;
+    margin: auto;
+    top: 60px;
+    height: 240px;
+    padding-top: 50px;
+}
+.atas{
+    margin: auto;
+    background-image: url(wotuolu.png);
+    position: relative;
+    background-repeat: no-repeat;
+    width: 85%;
+    height: 300px;
+    top: 60px;
 }
 h1{
     color: white;
@@ -76,25 +87,13 @@ h1{
     color: white;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
-.atas{
-    background-image: url(wotuolu.png);
-    position: absolute;
-    background-repeat: no-repeat;
-    width: 85%;
-    height: 40%;
-    margin-left: 100px;
-    top: 60px;
-    background-size: cover;
-    padding-top: 40px;
-}
 
 .penjelasan{
     background-color: #DED4B2;
     border-radius: 0px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-    width: 100%;
+    width: 1098px;
     height: 60px;
-    top:0px;
     padding: 10px;
     font-size: large;
     text-align: center;
@@ -118,7 +117,6 @@ h1{
     width: 300px;
     height: 180px;
     background-color: white;
-    margin-left:0px;
     padding: 30px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -128,7 +126,6 @@ h1{
     margin: auto;
     width: 300px;
     height: 180px;
-    margin-right: 45px;
     padding: 30px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -138,7 +135,6 @@ h1{
     margin: auto;
     width: 300px;
     height: 180px;
-    margin-right: 0px;
     padding: 30px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -153,7 +149,7 @@ h1{
     height: 30px;
     align-content: center;
     text-align: center;
-    margin-top:80px;
+    margin-top:50px;
     margin-left:43.5%;
 }
 
