--- a/home.css
+++ b/home.css
@@ -100,6 +100,8 @@ h2{
     background-repeat: no-repeat;
     background-size: cover;
     height: 500px;
+    position: relative;
+    z-index: 1;
 }
 a#pesan{
     color: black;
