--- a/home.css
+++ b/home.css
@@ -96,7 +96,7 @@ h2{
     padding: 10px;
 }
 .homeatas{
-    background-image: url("Gambar mlakujatim/bg home.png");
+    background-image: url("Gambar Mlakujatim/bg home.png");
     background-repeat: no-repeat;
     background-size: cover;
     height: 500px;
