--- a/budaya.css
+++ b/budaya.css
@@ -77,10 +77,10 @@ a.klik, a:hover{
 h1{
     font-size: 40px;
 }
-input[type=text]{
+#cari{
     font-family: sans-serif;
     font-size: 18px;
-    margin: 20px 25% 100px;
+    margin: 20px 25% 15px;
     width: 50%;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -89,6 +89,31 @@ input[type=text]{
     border-radius: 50px;
     background-color:rgba(255, 255, 255, 0.534);
     outline: none;
+}
+.cari{
+    box-sizing: border-box;
+    height: 110px;
+}
+
+#btncari{
+    display: flex;
+    justify-content: center;
+}
+
+#btncari button{
+    text-align: center;
+    margin: 0 auto;
+    border: 1px solid;
+    border-radius: 10px;
+    width: 80px;
+    cursor: pointer;
+    color: grey;
+    height: 25px;
+    outline: none;
+}
+a.btna, a:hover{
+    text-decoration: none;
+    background: none;
 }
 .atas{
     background-image: url("Gambar Mlakujatim/desa\ tengger\,\ bromo.jpg");
@@ -107,10 +132,15 @@ h2{
     margin-bottom: 20px;
 }
 .panah{
+    display: flex;
+    justify-content: space-between;
     text-align: center;
 }
 #panah1{
-    padding-right: 60%;
+    margin-left: 150px;
+}
+#panah2{
+    margin-right: 150px;
 }
 #panah1:hover{
     text-decoration: none;
