--- a/home.css
+++ b/home.css
@@ -28,7 +28,7 @@ label.logo1{
     font-size: 36px;
     line-height: 60px;
     color: #FEE074;
-    padding: 0px 0px 0px 100px;
+    margin-left: 100px;
 }
 label.logo2{
     font-family: Abhaya Libre;
@@ -38,7 +38,6 @@ label.logo2{
     font-size: 36px;
     line-height: 60px;
     color: #FFFFFF;
-    padding: 0px 0px 0px 0px;
 }
 nav ul{
     float: right;
@@ -60,11 +59,7 @@ a.klik, a:hover{
     text-decoration: underline;
     transition: .5s;
 }
-a#logo{
-    background: none;
-    text-decoration: none;
-    transition: .5s;
-}
+
 #login{
     background: rgba(188, 154, 32, 0.9);
 }
@@ -106,6 +101,12 @@ a#pesan{
     background: none;
     text-decoration: none;
     transition: .5s;
+}
+#pesanbtn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 400px;
 }
 .covid{
     display: flex;
@@ -356,3 +357,74 @@ a.sosmed:hover{
     background: none;
     text-decoration: none;
 }
+
+.checkbtn{
+    font-size: 30px;
+    color: black;
+    float: right;
+    line-height: 60px;
+    margin-right: 40px;
+    cursor: pointer;
+}
+.menubtn img{
+    width: 20px;
+    height: 20px;
+}
+
+#check{
+    display: none;
+}
+
+@media only screen and (max-width:1400px){
+    .checkbtn{
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 900px){
+    label.logo1{
+        font-size: 24px;
+        padding-left: 40px;
+        margin-left: 20px;
+    }
+    label.logo2{
+        font-size: 24px;
+    }
+    nav ul li a{
+        font-size: 12px;
+    }
+    nav ul{
+    }
+    .checkbtn{
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    /* For mobile phones: */
+    [class*="col-"] {
+      width: 100%;
+    }
+    .checkbtn{
+        display: block;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #2c3e50;
+        top: 80px;
+        left: 0;
+        text-align: center;
+    }
+    nav ul li{
+        display: block;
+
+    }
+    nav ul li a{
+        font-size: 14px;
+    }
+    a:hover, a.active{
+        background: none;
+        color: #0082e6;
+    }
