--- a/kelolawisata.css
+++ b/kelolawisata.css
@@ -61,84 +61,48 @@ a.klik, a:hover{
 a#logo{
     background: none;
     text-decoration: none;
+    transition: .5s;
 }
 #login{
     background: rgba(188, 154, 32, 0.9);
 }
-.cari{
-    margin: auto;
+
+h2{
     text-align: center;
+    margin: auto;
+    margin-bottom: 20px;
+}
+
+.container{
+    box-sizing: border-box;
+    width: auto;
     position: relative;
-    top: 60px;
-    margin-bottom: 100px;
-}
-.cari p{
-    margin-top: 20px;
-}
-#btncari{
-    display: flex;
-    justify-content: center;
-}
-
-#btncari button{
-    text-align: center;
-    margin: 0 auto;
-    border: 1px solid;
-    border-radius: 10px;
-    width: 80px;
-    cursor: pointer;
-    color: grey;
-    height: 25px;
-    outline: none;
-}
-a.btna, a:hover{
-    text-decoration: none;
-    background: none;
-}
-input[type=text]{
-    font-family: sans-serif;
-    font-size: 18px;
-    margin: 20px 25% 20px;
-    width: 50%;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    text-align: center;
-    border: 1px solid grey;
-    border-radius: 50px;
-    background-color:rgba(255, 255, 255, 0.534);
-    outline: none;
-}
-input[type=text]:focus{
-    border: 1px solid black;
-}
-.daftar{
-    box-sizing: border-box;
-    width: 80%;
+    top: 80px;
     margin: auto;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-.daftar img{
-    width: 220px;
-    height: 140px;
-}
-.daftar p{
-    margin-left: 30px;
-}
-.gambar{
-    margin-left: 150px;
-    display: flex;
-    background-color: #f1f1f1;
-    box-sizing: border-box;
-    width: 800px;
-    height: 140px;
-    border: 0px;
-    border-radius: 20px;
-}
-a.klikgambar{
-    color: black;
-    text-decoration: none;
 }
 
-.paragraf{
-    margin-top: 10px;
+.container table{
+    margin: auto;
+    width: 100%;
+    background-color: #f1f1f1;
+}
+
+.container table tr{
+    height: 30px;
+}
+
+.container table, tr, td{
+    font-family: sans-serif;
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding-left: 10px;
+}
+.container table, tr, th{
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+#btnedit{
+    padding: 3px;
+    cursor: pointer;
 }
