--- a/login 1.css
+++ b/login 1.css
@@ -68,16 +68,6 @@ h1{
     outline: none;
 }
 
-.lupa-password button{
-    background-color: #836f17;
-    padding : 5px;
-    font-size: 12px;
-    display: contents;
-    width: 100%;
-    margin: auto;
-    align-content: center;
-    text-align: center;
-}
 .sign-up button{
     background-color: #f1e199;
     padding: 10px;
@@ -98,4 +88,42 @@ a.klik, a:hover{
 }
 
 
+.lightbox {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: rgba(0, 0, 0, 0.5)
+}
+.toolbarLB {
+	text-align: right;
+	padding: 3px;
+}
+.closeLB {
+	color: red;
+	cursor: pointer;
+}
+.lightbox .iFrameContainer {
+	vertical-align: middle;
+	background: #CCC;
+	padding: 2px;
+	width: 500px;
+	height: 250px;
+}
 
+.lightbox .iFrameContainer h1{
+	text-align: center;
+	color: steelblue;
+}
+
+.lightbox .iFrameContainer p{
+	text-align: center;
+}
+
+.lightbox.closed {
+	display: none;
+}
