--- a/sign up.css
+++ b/sign up.css
@@ -88,3 +88,59 @@ a.lanjutan, a:hover{
     text-decoration: none;
 }
 
+@media only screen and (max-width:768px){  
+    .container{
+        width: 200px;
+    }
+
+    h1{
+        text-align: center;
+        font-size: 14px;
+    }
+
+    .form {
+        padding: 20px 30px;
+    }
+
+    .form-control{
+        margin-bottom:10px;
+    }
+
+    .form-control label{
+        color: #0a0a0a;
+        display: block;
+        font-size: 8px;
+    }
+
+    .form-control input{
+        padding: 2px;
+        font-size: 6px;
+        display: block;
+        width: 100%;
+    }
+
+    .form-control input:focus{
+        border-color: #888888;
+        outline: 0;
+    }
+
+    .form-control button{
+        padding: 3px;
+        font-size: 6px;
+        display: block;
+        width: 50%;
+        align-content: center;
+        text-align: center;
+        margin:auto;
+    }
+
+    .sign-up button{
+        padding: 3px;
+        font-size: 6px;
+        display: block;
+        width: 80%;
+        align-content: center;
+        text-align: center;
+        margin:auto;
+    }
+}
