--- a/addwisata.css
+++ b/addwisata.css
@@ -56,6 +56,7 @@ a.klik, a:hover{
 }
 #login{
     background: rgba(188, 154, 32, 0.9);
+    border-radius: 50px;
 }
 table, th, td{
     margin-top: 100px;
@@ -96,4 +97,116 @@ textarea{
 }
 .tombol{
     margin: 0px 400px;
+}
+
+.checkbtn{
+    float: right;
+    line-height: 70px;
+    margin-right: 40px;
+    cursor: pointer;
+    color: black;
+    display: none;
+}
+
+#check{
+    display: none;
+}
+.menubtn img{
+    width: 30px;
+}
+
+@media only screen and (max-width:1300px){
+    nav{
+        background:rgba(255, 255, 255, 0.8);
+        width: 100%;
+        height: 50px;
+        overflow: hidden;
+        transition: 0.4s;
+        position: fixed;
+        top: 0;
+        z-index: 99;
+    }
+    label.logo1{
+        font-size: 30px;
+        line-height: 50px;
+        color: #FEE074;
+        padding: 0px 0px 0px 5%;
+    }
+    label.logo2{
+        font-size: 30px;
+        line-height: 50px;
+        color: #FFFFFF;
+        padding: 0px 0px 0px 0px;
+    }
+    nav ul{
+        float: right;
+        margin-right: 5%;
+    }
+    nav ul li{
+        display: inline-block;
+        line-height: 50px;
+        margin: 0px 20px;
+    }
+    nav ul li a{
+        color: black;
+        font-size: 14px;
+        font-weight: normal;
+        padding: 10px 13px;
+    }
+}
+
+@media only screen and (max-width: 768px){
+    nav{
+        background:rgba(255, 255, 255, 0.8);
+        width: 100%;
+        height: 40px;
+        overflow: hidden;
+        transition: 0.4s;
+        position: fixed;
+        top: 0;
+        z-index: 99;
+    }
+
+    label.logo1{
+        font-size: 20px;
+        line-height: 40px;
+        padding-left: 40px;
+        margin-left: 20px;
+    }
+
+    label.logo2{
+        font-size: 20px;
+        line-height: 40px;
+    }
+    nav ul li a{
+        font-size: 12px;
+    }
+    nav ul li{
+        display: block;
+        margin: 10px 0;
+        line-height: 30px;
+    }
+
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 200px;
+        background:rgba(255, 255, 255, 0.8);
+        top: 40px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+
+    #check:checked~ul{
+        left: 0;
+    }
+
+    .checkbtn{
+        line-height: 50px;
+        display: block;
+    }
+    .menubtn img{
+        width: 20px;
+    }
 }
