--- a/profile.css
+++ b/profile.css
@@ -65,6 +65,7 @@ a#logo{
 }
 #login{
     background: rgba(188, 154, 32, 0.9);
+    border-radius: 50px;
 }
 .profile{
     box-sizing: border-box;
@@ -84,7 +85,7 @@ button{
 }
 .aturakun{
     margin-top: 25px;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 .aturakun button{
     background-color: #E1C048;
@@ -92,9 +93,13 @@ button{
     cursor: pointer;
 }
 .tambahwisata{
-    margin: 0 0 30px;
+    margin: 0 0 20px;
 }
 .tambahwisata button{
+    outline: none;
+    cursor: pointer;
+}
+.kelolawisata button{
     outline: none;
     cursor: pointer;
 }
@@ -103,6 +108,8 @@ button{
     margin: auto;
     text-align: center;
     padding: 20px 0;
+    position: relative;
+    top: 20px;
     display: flex;
     justify-content: space-evenly;
     height: 220px;
@@ -129,21 +136,18 @@ label.footer2{
     margin-top: 20px;
 }
 .flexfooter{
-    display: flex;
     text-align: center;
     padding-top: 20px;
 }
-.bagi2{
-    box-sizing: border-box;
-    display: flex;
-    justify-content: space-between;
-    width: 700px;
-}
+
 .definisi p{
     font-size: 16px;
 }
 .link{
     margin-top: -20px;
+}
+.sosmed img{
+    width: 60px;
 }
 .simbol{
     margin-top: 20px;
@@ -151,4 +155,194 @@ label.footer2{
 a.sosmed:hover{
     background: none;
     text-decoration: none;
+}
+.checkbtn{
+    float: right;
+    line-height: 70px;
+    margin-right: 40px;
+    cursor: pointer;
+    color: black;
+    display: none;
+}
+
+#check{
+    display: none;
+}
+.menubtn img{
+    width: 30px;
+}
+
+@media only screen and (max-width:1300px){
+    nav{
+        background:rgba(255, 255, 255, 0.8);
+        width: 100%;
+        height: 50px;
+        overflow: hidden;
+        transition: 0.4s;
+        position: fixed;
+        top: 0;
+        z-index: 99;
+    }
+    label.logo1{
+        font-size: 30px;
+        line-height: 50px;
+        color: #FEE074;
+        padding: 0px 0px 0px 5%;
+    }
+    label.logo2{
+        font-size: 30px;
+        line-height: 50px;
+        color: #FFFFFF;
+        padding: 0px 0px 0px 0px;
+    }
+    nav ul{
+        float: right;
+        margin-right: 5%;
+    }
+    nav ul li{
+        display: inline-block;
+        line-height: 50px;
+        margin: 0px 20px;
+    }
+    nav ul li a{
+        color: black;
+        font-size: 14px;
+        font-weight: normal;
+        padding: 10px 13px;
+    }
+
+    .footer{
+        background-color:#FFCF22 ;
+        margin: auto;
+        text-align: center;
+        padding: 20px 0;
+        position: relative;
+        top: 20px;
+        display: flex;
+        justify-content: space-evenly;
+        height: 180px;
+    }
+    label.footer1{
+        font-size: 30px;
+    }
+    label.footer2{
+        font-size: 30px;
+    }
+    .footer p{
+        font-size: 16px;
+        margin-top: 20px;
+    }
+    .flexfooter{
+        display: flex;
+        text-align: center;
+        padding-top: 20px;
+    }
+
+    .definisi p{
+        font-size: 14px;
+    }
+    .link{
+        margin-top: -20px;
+    }
+    .simbol{
+        margin-top: 20px;
+    }
+    .link img{
+        width: 40px;
+    }
+
+}
+
+@media only screen and (max-width: 768px){
+    nav{
+        background:rgba(255, 255, 255, 0.8);
+        width: 100%;
+        height: 40px;
+        overflow: hidden;
+        transition: 0.4s;
+        position: fixed;
+        top: 0;
+        z-index: 99;
+    }
+
+    label.logo1{
+        font-size: 20px;
+        line-height: 40px;
+        padding-left: 40px;
+        margin-left: 20px;
+    }
+
+    label.logo2{
+        font-size: 20px;
+        line-height: 40px;
+    }
+    nav ul li a{
+        font-size: 12px;
+    }
+    nav ul li{
+        display: block;
+        margin: 10px 0;
+        line-height: 30px;
+    }
+
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 200px;
+        background:rgba(255, 255, 255, 0.8);
+        top: 40px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+
+    #check:checked~ul{
+        left: 0;
+    }
+
+    .checkbtn{
+        line-height: 50px;
+        display: block;
+    }
+
+    .footer{
+        background-color:#FFCF22 ;
+        margin: auto;
+        text-align: center;
+        padding: 10px 0;
+        position: relative;
+        top: 20px;
+        display: flex;
+        justify-content: space-evenly;
+        height: 130px;
+    }
+    label.footer1{
+        font-size: 20px;
+    }
+    label.footer2{
+        font-size: 20px;
+    }
+    .footer p{
+        font-size: 10px;
+        margin-top: 20px;
+    }
+    .flexfooter{
+        display: flex;
+        text-align: center;
+        padding-top: 16px;
+    }
+
+    .definisi p{
+        font-size: 10px;
+        margin-top: 20px;
+    }
+    .link{
+        margin-top: -20px;
+    }
+    .simbol{
+        margin-top: 10px;
+    }
+    .link img{
+        width: 25px;
+    }
 }
